Creation modules pages and shared, creation components inicio and header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<h1>Hello Oliver!</h1>
-<!-- Header Section -->
+<div class="">
+  <shared-header/>
+</div>
+<div class="">
+  <pages-inicio/>
+</div>
