Creation component sobre-mi

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<div class="">
-  <shared-header/>
-</div>
-<div class="">
-  <pages-inicio/>
-</div>
+<shared-header/>
+<pages-inicio/>
+<pages-sobremi/>
