--- a/src/app/pages/inicio/inicio.component.css
+++ b/src/app/pages/inicio/inicio.component.css
@@ -2,16 +2,17 @@
   background: linear-gradient(to top, rgba(30,35,38,.8), rgba(30,35,38,1)), url(/images/fondo.jpg);
   background-size: cover;
 
-  height: calc(100vh - 84px); /* Ajusta los 84px según la altura de tu menú */
-  width: 100%;
-  position: fixed;
-  bottom: 0;
-  left: 0;
+  /* height: calc(100vh - 84px); Ajusta los 84px según la altura de tu menú */
+  height: 100vh;
+  /* width: 100%; */
+  /* position: fixed; */
+  /* bottom: 0; */
+  /* left: 0; */
 
   color: #fff;
 
   display: flex; /* centra el card de presentacion al centro vertical y horizontal */
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 }
 
